src/objects/Invoices__x.object
<CustomObject>
    <description>Invoices</description>
    <externalDataSource>Northwind</externalDataSource>
    <externalName>Invoices</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>CustomerID</description>
        <externalDeveloperName>CustomerID</externalDeveloperName>
        <label>CustomerID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>CustomerName</description>
        <externalDeveloperName>CustomerName</externalDeveloperName>
        <label>CustomerName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount</description>
        <externalDeveloperName>Discount</externalDeveloperName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtendedPrice__c</fullName>
        <description>ExtendedPrice</description>
        <externalDeveloperName>ExtendedPrice</externalDeveloperName>
        <label>ExtendedPrice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <description>Freight</description>
        <externalDeveloperName>Freight</externalDeveloperName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <description>OrderDate</description>
        <externalDeveloperName>OrderDate</externalDeveloperName>
        <label>OrderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>OrderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode</description>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>ProductID</description>
        <externalDeveloperName>ProductID</externalDeveloperName>
        <label>ProductID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>ProductName</description>
        <externalDeveloperName>ProductName</externalDeveloperName>
        <label>ProductName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <externalDeveloperName>Region</externalDeveloperName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiredDate__c</fullName>
        <description>RequiredDate</description>
        <externalDeveloperName>RequiredDate</externalDeveloperName>
        <label>RequiredDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <description>Salesperson</description>
        <externalDeveloperName>Salesperson</externalDeveloperName>
        <label>Salesperson</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipAddress__c</fullName>
        <description>ShipAddress</description>
        <externalDeveloperName>ShipAddress</externalDeveloperName>
        <label>ShipAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipCity__c</fullName>
        <description>ShipCity</description>
        <externalDeveloperName>ShipCity</externalDeveloperName>
        <label>ShipCity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipCountry__c</fullName>
        <description>ShipCountry</description>
        <externalDeveloperName>ShipCountry</externalDeveloperName>
        <label>ShipCountry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipName__c</fullName>
        <description>ShipName</description>
        <externalDeveloperName>ShipName</externalDeveloperName>
        <label>ShipName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipPostalCode__c</fullName>
        <description>ShipPostalCode</description>
        <externalDeveloperName>ShipPostalCode</externalDeveloperName>
        <label>ShipPostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipRegion__c</fullName>
        <description>ShipRegion</description>
        <externalDeveloperName>ShipRegion</externalDeveloperName>
        <label>ShipRegion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <description>ShippedDate</description>
        <externalDeveloperName>ShippedDate</externalDeveloperName>
        <label>ShippedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShipperName__c</fullName>
        <description>ShipperName</description>
        <externalDeveloperName>ShipperName</externalDeveloperName>
        <label>ShipperName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>UnitPrice</description>
        <externalDeveloperName>UnitPrice</externalDeveloperName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Invoices</label>
    <pluralLabel>Invoices</pluralLabel>
</CustomObject>